--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="zVJDYx0s2CeTWeWCILnERwhEYJ-1HyKnEaC-bOluHY4" />
     <title>Ansh Phirani | Front-end Developer</title>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
